format and i18n postition member

--- a/src/app/module/auth/login-form/login-form.component.html
+++ b/src/app/module/auth/login-form/login-form.component.html
@@ -15,7 +15,9 @@
             formControlName="password"
         />
     </div>
-    <button class="btn btn-primary btn-user w-100 text-capitalize">{{ 'AUTH.LOGIN' | translate }}</button>
+    <button class="btn btn-primary btn-user w-100 text-capitalize">
+        {{ 'AUTH.LOGIN' | translate }}
+    </button>
     <hr />
 
     <div class="d-flex flex-column gap-3">
