--- a/src/app/module/auth/register-form/register-form.component.html
+++ b/src/app/module/auth/register-form/register-form.component.html
@@ -33,5 +33,7 @@
             formControlName="password"
         />
     </div>
-    <button class="btn btn-primary btn-user w-100 text-capitalize">{{ 'AUTH.REGISTER' | translate }}</button>
+    <button class="btn btn-primary btn-user w-100 text-capitalize">
+        {{ 'AUTH.REGISTER' | translate }}
+    </button>
 </form>
