--- a/src/app/module/common/components/language-select/language-select.component.html
+++ b/src/app/module/common/components/language-select/language-select.component.html
@@ -9,12 +9,24 @@
     (change)="onChangeLanguage($event)"
 >
     <ng-template ng-label-tmp let-item="item">
-        <img class="me-2" width="30px" height="30px" [src]="item.iconUrl" [alt]="item.label | translate" />
+        <img
+            class="me-2"
+            width="30px"
+            height="30px"
+            [src]="item.iconUrl"
+            [alt]="item.label | translate"
+        />
         <span class="small">{{ item.label | translate }}</span>
     </ng-template>
 
     <ng-template ng-option-tmp let-item="item">
-        <img class="me-2" width="30px" height="30px" [src]="item.iconUrl" [alt]="item.label | translate" />
+        <img
+            class="me-2"
+            width="30px"
+            height="30px"
+            [src]="item.iconUrl"
+            [alt]="item.label | translate"
+        />
         <span class="small">{{ item.label | translate }}</span>
     </ng-template>
 </ng-select>
