--- a/src/app/module/donate/form-search/form-search.component.html
+++ b/src/app/module/donate/form-search/form-search.component.html
@@ -1,8 +1,13 @@
 <form [formGroup]="formGroup" class="d-flex flex-column row-gap-3">
     <div class="row row-gap-3">
         <div class="col-md-6">
-            <label class="fw-semibold text-capitalize">{{ 'DONATE.NAME_DONATOR' | translate }}</label>
-            <input [placeholder]="'DONATE.INPUT_NAME_DONATOR' | translate" class="form-control" />
+            <label class="fw-semibold text-capitalize">{{
+                'DONATE.NAME_DONATOR' | translate
+            }}</label>
+            <input
+                [placeholder]="'DONATE.INPUT_NAME_DONATOR' | translate"
+                class="form-control"
+            />
         </div>
         <div class="col-md-6">
             <label class="fw-semibold">{{ 'COMMON.STATUS' | translate }}</label>
@@ -17,7 +22,9 @@
         </div>
 
         <div class="col-md-6">
-            <label class="fw-semibold">{{ 'DONATE.DATE_DONATE' | translate }}</label>
+            <label class="fw-semibold">{{
+                'DONATE.DATE_DONATE' | translate
+            }}</label>
             <div class="row row-gap-3">
                 <div class="col-md-6">
                     <input type="date" class="form-control" />
@@ -33,7 +40,9 @@
         <div class="d-flex justify-content-start justify-content-md-center">
             <button class="btn btn-primary">
                 <i class="fas fa-search me-2"></i>
-                <span class="text-capitalize">{{ 'COMMON.SEARCH' | translate }}</span>
+                <span class="text-capitalize">{{
+                    'COMMON.SEARCH' | translate
+                }}</span>
             </button>
         </div>
     </div>
