--- a/src/app/module/funding/form-search/form-search.component.html
+++ b/src/app/module/funding/form-search/form-search.component.html
@@ -18,7 +18,10 @@
     <div class="row row-gap-3">
         <div class="col-md-6">
             <label class="fw-semibold">{{ 'FUNDING.NAME' | translate }}</label>
-            <input class="form-control" [placeholder]="'FUNDING.INPUT_NAME' | translate" />
+            <input
+                class="form-control"
+                [placeholder]="'FUNDING.INPUT_NAME' | translate"
+            />
         </div>
         <div class="col-md-6">
             <label class="fw-semibold">{{ 'FUNDING.DATE' | translate }}</label>
@@ -37,7 +40,9 @@
         <div class="d-flex justify-content-start justify-content-md-center">
             <button class="btn btn-primary">
                 <i class="fas fa-search me-2"></i>
-                <span class="text-capitalize">{{ 'COMMON.SEARCH' | translate }}</span>
+                <span class="text-capitalize">{{
+                    'COMMON.SEARCH' | translate
+                }}</span>
             </button>
         </div>
     </div>
