--- a/src/app/module/spending/create-form/create-form.component.html
+++ b/src/app/module/spending/create-form/create-form.component.html
@@ -1,7 +1,9 @@
 <form class="d-flex flex-column row-gap-3">
     <div class="row">
         <div class="col-md-12">
-            <label class="fw-semibold required">{{ 'SPENDING.SPENDER' | translate }}</label>
+            <label class="fw-semibold required">{{
+                'SPENDING.SPENDER' | translate
+            }}</label>
             <ng-select
                 [placeholder]="'SPENDING.SELECT_SPENDER' | translate"
             ></ng-select>
@@ -10,14 +12,18 @@
 
     <div class="row">
         <div class="col-md-12">
-            <label class="fw-semibold required">{{ 'COMMON.AMT' | translate }}</label>
+            <label class="fw-semibold required">{{
+                'COMMON.AMT' | translate
+            }}</label>
             <input class="form-control" />
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12">
-            <label class="fw-semibold required">{{ 'COMMON.FC' | translate }}</label>
+            <label class="fw-semibold required">{{
+                'COMMON.FC' | translate
+            }}</label>
             <ng-select
                 [placeholder]="'COMMON.SELECT_FC' | translate"
             ></ng-select>
@@ -26,7 +32,9 @@
 
     <div class="row">
         <div class="col-md-12">
-            <label class="fw-semibold required">{{ 'COMMON.DESC' | translate }}</label>
+            <label class="fw-semibold required">{{
+                'COMMON.DESC' | translate
+            }}</label>
             <textarea class="form-control"></textarea>
         </div>
     </div>
