--- a/src/app/module/spending/form-search/form-search.component.html
+++ b/src/app/module/spending/form-search/form-search.component.html
@@ -28,7 +28,9 @@
         <div class="d-flex justify-content-start justify-content-md-center">
             <button class="btn btn-primary">
                 <i class="fas fa-search me-2"></i>
-                <span class="text-capitalize">{{ 'COMMON.SEARCH' | translate }}</span>
+                <span class="text-capitalize">{{
+                    'COMMON.SEARCH' | translate
+                }}</span>
             </button>
         </div>
     </div>
