--- a/src/app/pages/match-result/create/create-match-result.page.html
+++ b/src/app/pages/match-result/create/create-match-result.page.html
@@ -5,7 +5,9 @@
             <span class="h4">Thông tin người ghi bản</span>
             <button class="btn btn-sm btn-success">
                 <i class="fas fa-plus me-2"></i>
-                <span class="text-capitalize">{{ 'COMMON.CREATE' | translate }}</span>
+                <span class="text-capitalize"
+                    >{{ 'COMMON.CREATE' | translate }}</span
+                >
             </button>
         </div>
         <div class="flex-grow-1">
@@ -20,5 +22,4 @@
         </button>
         <button-back></button-back>
     </div>
-
 </div>
