--- a/src/app/layout/main/components/header/header.component.html
+++ b/src/app/layout/main/components/header/header.component.html
@@ -1,10 +1,16 @@
 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 shadow">
     <!-- Sidebar Toggle (Topbar) -->
-    <button id="sidebar-toggle-top" class="btn btn-link d-md-none rounded-circle mr-3" (click)="openSidebarMobile()">
+    <button
+        id="sidebar-toggle-top"
+        class="btn btn-link d-md-none rounded-circle mr-3"
+        (click)="openSidebarMobile()"
+    >
         <i class="fa fa-bars"></i>
     </button>
 
-    <span class="h4 ps-3 d-none d-md-block text-capitalize">{{ title$ | async | translate }}</span>
+    <span class="h4 ps-3 d-none d-md-block text-capitalize">{{
+        title$ | async | translate
+    }}</span>
 
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto d-flex align-items-center">
@@ -15,7 +21,11 @@
             </div>
         </li>
         <li class="nav-item dropdown no-arrow mx-1">
-            <button type="button" class="nav-link dropdown-toggle" (click)="toggleDropdown(alertsDropdown)">
+            <button
+                type="button"
+                class="nav-link dropdown-toggle"
+                (click)="toggleDropdown(alertsDropdown)"
+            >
                 <i class="fas fa-bell fa-fw"></i>
                 <!-- Counter - Alerts -->
                 <span class="badge badge-danger badge-counter">3+</span>
@@ -37,7 +47,9 @@
                     </div>
                     <div>
                         <div class="small text-gray-500">December 12, 2019</div>
-                        <span class="font-weight-bold">A new monthly report is ready to download!</span>
+                        <span class="font-weight-bold"
+                            >A new monthly report is ready to download!</span
+                        >
                     </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
@@ -54,21 +66,32 @@
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="mr-3">
                         <div class="icon-circle bg-warning">
-                            <i class="fas fa-exclamation-triangle text-white"></i>
+                            <i
+                                class="fas fa-exclamation-triangle text-white"
+                            ></i>
                         </div>
                     </div>
                     <div>
                         <div class="small text-gray-500">December 2, 2019</div>
-                        Spending Alert: We've noticed unusually high spending for your account.
+                        Spending Alert: We've noticed unusually high spending
+                        for your account.
                     </div>
                 </a>
-                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
+                <a
+                    class="dropdown-item text-center small text-gray-500"
+                    href="#"
+                    >Show All Alerts</a
+                >
             </div>
         </li>
 
         <!-- Nav Item - Messages -->
         <li class="nav-item dropdown no-arrow mx-1">
-            <button type="button" class="nav-link dropdown-toggle" (click)="toggleDropdown(messagesDropdown)">
+            <button
+                type="button"
+                class="nav-link dropdown-toggle"
+                (click)="toggleDropdown(messagesDropdown)"
+            >
                 <i class="fas fa-envelope fa-fw"></i>
                 <!-- Counter - Messages -->
                 <span class="badge badge-danger badge-counter">7</span>
@@ -84,55 +107,84 @@
                 <h6 class="dropdown-header">Message Center</h6>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="dropdown-list-image mr-3">
-                        <img class="rounded-circle" src="img/undraw_profile_1.svg" alt="..." />
+                        <img
+                            class="rounded-circle"
+                            src="img/undraw_profile_1.svg"
+                            alt="..."
+                        />
                         <div class="status-indicator bg-success"></div>
                     </div>
                     <div class="font-weight-bold">
                         <div class="text-truncate">
-                            Hi there! I am wondering if you can help me with a problem I've been having.
+                            Hi there! I am wondering if you can help me with a
+                            problem I've been having.
                         </div>
-                        <div class="small text-gray-500">Emily Fowler · 58m</div>
+                        <div class="small text-gray-500">
+                            Emily Fowler · 58m
+                        </div>
                     </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="dropdown-list-image mr-3">
-                        <img class="rounded-circle" src="img/undraw_profile_2.svg" alt="..." />
+                        <img
+                            class="rounded-circle"
+                            src="img/undraw_profile_2.svg"
+                            alt="..."
+                        />
                         <div class="status-indicator"></div>
                     </div>
                     <div>
                         <div class="text-truncate">
-                            I have the photos that you ordered last month, how would you like them sent to you?
+                            I have the photos that you ordered last month, how
+                            would you like them sent to you?
                         </div>
                         <div class="small text-gray-500">Jae Chun · 1d</div>
                     </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="dropdown-list-image mr-3">
-                        <img class="rounded-circle" src="img/undraw_profile_3.svg" alt="..." />
+                        <img
+                            class="rounded-circle"
+                            src="img/undraw_profile_3.svg"
+                            alt="..."
+                        />
                         <div class="status-indicator bg-warning"></div>
                     </div>
                     <div>
                         <div class="text-truncate">
-                            Last month's report looks great, I am very happy with the progress so far, keep up the good
-                            work!
+                            Last month's report looks great, I am very happy
+                            with the progress so far, keep up the good work!
                         </div>
-                        <div class="small text-gray-500">Morgan Alvarez · 2d</div>
+                        <div class="small text-gray-500">
+                            Morgan Alvarez · 2d
+                        </div>
                     </div>
                 </a>
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="dropdown-list-image mr-3">
-                        <img class="rounded-circle" src="https://source.unsplash.com/Mv9hjnEUHR4/60x60" alt="..." />
+                        <img
+                            class="rounded-circle"
+                            src="https://source.unsplash.com/Mv9hjnEUHR4/60x60"
+                            alt="..."
+                        />
                         <div class="status-indicator bg-success"></div>
                     </div>
                     <div>
                         <div class="text-truncate">
-                            Am I a good boy? The reason I ask is because someone told me that people say this to all
-                            dogs, even if they aren't good...
+                            Am I a good boy? The reason I ask is because someone
+                            told me that people say this to all dogs, even if
+                            they aren't good...
                         </div>
-                        <div class="small text-gray-500">Chicken the Dog · 2w</div>
+                        <div class="small text-gray-500">
+                            Chicken the Dog · 2w
+                        </div>
                     </div>
                 </a>
-                <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
+                <a
+                    class="dropdown-item text-center small text-gray-500"
+                    href="#"
+                    >Read More Messages</a
+                >
             </div>
         </li>
 
@@ -140,9 +192,18 @@
 
         <!-- Nav Item - User Information -->
         <li class="nav-item dropdown no-arrow">
-            <button type="button" class="nav-link dropdown-toggle" (click)="toggleDropdown(userDropdown)">
-                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
-                <img class="img-profile rounded-circle" src="img/undraw_profile.svg" />
+            <button
+                type="button"
+                class="nav-link dropdown-toggle"
+                (click)="toggleDropdown(userDropdown)"
+            >
+                <span class="mr-2 d-none d-lg-inline text-gray-600 small"
+                    >Douglas McGee</span
+                >
+                <img
+                    class="img-profile rounded-circle"
+                    src="img/undraw_profile.svg"
+                />
             </button>
             <!-- Dropdown - User Information -->
             <div
@@ -165,8 +226,15 @@
                     Activity Log
                 </a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                <a
+                    class="dropdown-item"
+                    href="#"
+                    data-toggle="modal"
+                    data-target="#logoutModal"
+                >
+                    <i
+                        class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"
+                    ></i>
                     Logout
                 </a>
             </div>
