--- a/src/app/layout/main/components/sidebar/sidebar.component.html
+++ b/src/app/layout/main/components/sidebar/sidebar.component.html
@@ -5,7 +5,10 @@
     [class.sidebar-mobile-show]="sidebarStatus$ | async"
 >
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" [routerLink]="'/'">
+    <a
+        class="sidebar-brand d-flex align-items-center justify-content-center"
+        [routerLink]="'/'"
+    >
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
@@ -48,7 +51,9 @@
                 (click)="routeLink(item.link, li)"
             >
                 <i [class]="item.icon"></i>
-                <span class="text-capitalize">{{ item.label | translate }}</span>
+                <span class="text-capitalize">{{
+                    item.label | translate
+                }}</span>
             </a>
             <ng-container *ngIf="item.children">
                 <div
