--- a/src/app/module/funding/create-form/create-form.component.htm
+++ b/src/app/module/funding/create-form/create-form.component.htm
@@ -1,14 +1,17 @@
 <form class="d-flex flex-column row-gap-3">
     <div class="row">
         <div class="col-md-12">
-            <label class="fw-semibold required">{{ 'FUNDING.NAME' | translate }}</label>
-            <input class="form-control" [placeholder]="'FUNDING.INPUT_NAME' | translate" />
+            <label class="fw-semibold required"
+                >{{ 'FUNDING.NAME' | translate }}</label
+            >
+            <input
+                class="form-control"
+                [placeholder]="'FUNDING.INPUT_NAME' | translate"
+            />
         </div>
     </div>
 
     <div class="row">
-        <div class="col-md-12">
-        </div>
+        <div class="col-md-12"></div>
     </div>
-
 </form>
