--- a/src/app/module/match-result/create-form/create-form.component.html
+++ b/src/app/module/match-result/create-form/create-form.component.html
@@ -1,14 +1,18 @@
 <form [formGroup]="formGroup" class="d-flex flex-column row-gap-3">
     <div class="row row-gap-3">
         <div class="col-md-12">
-            <label class="fw-semibold required">{{ 'MATCH_RESULT.NAME' | translate }}</label>
+            <label class="fw-semibold required">{{
+                'MATCH_RESULT.NAME' | translate
+            }}</label>
             <ng-select
                 [placeholder]="'MATCH_RESULT.NAME' | translate"
             ></ng-select>
         </div>
 
         <div class="col-md-12">
-            <label class="fw-semibold required">{{ 'COMMON.FC' | translate }}</label>
+            <label class="fw-semibold required">{{
+                'COMMON.FC' | translate
+            }}</label>
             <div class="row row-gap-3">
                 <div class="col-md-9">
                     <ng-select
@@ -16,21 +20,31 @@
                     ></ng-select>
                 </div>
                 <div class="col-md-3">
-                    <input type="number" class="form-control" [placeholder]="'MATCH_RESULT.SCORE' | translate "/>
+                    <input
+                        type="number"
+                        class="form-control"
+                        [placeholder]="'MATCH_RESULT.SCORE' | translate"
+                    />
                 </div>
             </div>
         </div>
 
         <div class="col-md-12">
-            <label class="fw-semibold required">{{ 'COMMON.FC' | translate }}</label>
+            <label class="fw-semibold required">{{
+                'COMMON.FC' | translate
+            }}</label>
             <div class="row row-gap-3">
                 <div class="col-md-9">
                     <ng-select
-                       [placeholder]="'COMMON.SELECT_FC' | translate" 
+                        [placeholder]="'COMMON.SELECT_FC' | translate"
                     ></ng-select>
                 </div>
                 <div class="col-md-3">
-                    <input type="number" class="form-control" [placeholder]="'MATCH_RESULT.SCORE' | translate"/>
+                    <input
+                        type="number"
+                        class="form-control"
+                        [placeholder]="'MATCH_RESULT.SCORE' | translate"
+                    />
                 </div>
             </div>
         </div>
