--- a/src/app/pages/spending/spending.page.html
+++ b/src/app/pages/spending/spending.page.html
@@ -6,17 +6,29 @@
     </div>
 
     <div class="bg-light p-3 rounded h-100">
-        <div class="bg-white p-3 rounded h-100 d-flex flex-column row-gap-2 shadow">
+        <div
+            class="bg-white p-3 rounded h-100 d-flex flex-column row-gap-2 shadow"
+        >
             <div class="d-flex justify-content-between align-items-center">
-                <i class="fw-semibold text-capitalize">{{ 'COMMON.TOTAL_RECORD' | translate:{numberOfRecord: 1} }}</i>
+                <i class="fw-semibold text-capitalize"
+                    >{{ 'COMMON.TOTAL_RECORD' | translate:{numberOfRecord: 1}
+                    }}</i
+                >
                 <div class="d-flex gap-2">
-                    <button class="btn btn-sm btn-success" (click)="openAddModal()">
+                    <button
+                        class="btn btn-sm btn-success"
+                        (click)="openAddModal()"
+                    >
                         <i class="fas fa-plus me-2"></i>
-                        <span class="text-capitalize">{{ 'COMMON.CREATE' | translate }}</span>
+                        <span class="text-capitalize"
+                            >{{ 'COMMON.CREATE' | translate }}</span
+                        >
                     </button>
                     <button class="btn btn-sm btn-secondary">
                         <i class="fas fa-download me-2"></i>
-                        <span class="text-capitalize">{{ 'COMMON.EXPORT_EXCEL' | translate }}</span>
+                        <span class="text-capitalize"
+                            >{{ 'COMMON.EXPORT_EXCEL' | translate }}</span
+                        >
                     </button>
                 </div>
             </div>
