--- a/src/app/module/common/components/fms-select/fms-select.component.html
+++ b/src/app/module/common/components/fms-select/fms-select.component.html
@@ -7,6 +7,7 @@
     >
     <ng-select
         [items]="items"
+        [groupBy]="group"
         [bindLabel]="bindLabel"
         [bindValue]="bindValue"
         [placeholder]="placeholder"
@@ -16,7 +17,48 @@
         (blur)="markAsTouched()"
         (ngModelChange)="onChangeValue()"
     >
-        <ng-content></ng-content>
+        <ng-container *ngFor="let tmp of templates" [ngSwitch]="tmp.name">
+            <ng-template
+                *ngSwitchCase="'ng-option-tmp'"
+                ng-option-tmp
+                let-item="item"
+                let-index="index"
+            >
+                <ng-container
+                    [ngTemplateOutlet]="tmp.templateRef"
+                    [ngTemplateOutletContext]="{ item: item, index: index }"
+                ></ng-container>
+            </ng-template>
+
+            <ng-template
+                *ngSwitchCase="'ng-optgroup-tmp'"
+                ng-optgroup-tmp
+                let-item="item"
+                let-index="index"
+            >
+                <ng-container
+                    [ngTemplateOutlet]="tmp.templateRef"
+                    [ngTemplateOutletContext]="{ item: item, index: index }"
+                ></ng-container>
+            </ng-template>
+
+            <ng-template
+                *ngSwitchCase="'ng-label-tmp'"
+                ng-label-tmp
+                let-item="item"
+                let-index="index"
+                let-clear="clear"
+            >
+                <ng-container
+                    [ngTemplateOutlet]="tmp.templateRef"
+                    [ngTemplateOutletContext]="{
+                        item: item,
+                        index: index,
+                        clear: clear
+                    }"
+                ></ng-container>
+            </ng-template>
+        </ng-container>
     </ng-select>
 </div>
 <div *ngIf="control.touched && control.invalid">
