--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 /* Quartz Theme Specific CSS */
 @import 'ag-grid-community/styles/ag-theme-quartz.css';
 @import '~@ng-select/ng-select/themes/default.theme.css';
+@import './mixin';
 
 .form-control {
     &:focus {
@@ -39,6 +40,10 @@ input {
 .fas.fa-times,
 .cursor-pointer {
     cursor: pointer !important;
+}
+
+.ag-overlay-no-rows-wrapper {
+    text-transform: capitalize;
 }
 
 @for $i from 1 to 100 {
