--- a/src/app/pages/football-club/create-football-club/create-football-club.page.html
+++ b/src/app/pages/football-club/create-football-club/create-football-club.page.html
@@ -3,26 +3,11 @@
         (formInitialized)="createFcForm = $event"
         (changeAvatar)="avatar = $event"
     ></create-fc-form>
-    <div class="d-flex flex-column gap-2">
-        <div class="d-flex justify-content-between align-items-center">
-            <h4 class="text-capitalize">
-                {{ 'MEMBER.LIST_OF_MEMBER' | translate }}
-            </h4>
-            <button class="btn btn-success" (click)="openAddMemberModal()">
-                <i class="fas fa-plus me-2"></i>
-                <span class="text-capitalize">
-                    {{ 'MEMBER.CREATE_MEMBER' | translate }}
-                </span>
-            </button>
-        </div>
-        <div style="height: 300px">
-            <member-grid
-                [rowData]="members"
-                (updateMember)="onUpdateMember($event)"
-                (deleteMember)="onDeleteMember($event)"
-            ></member-grid>
-        </div>
-    </div>
+    <list-media [media]="media" (changeMedia)="media = $event"></list-media>
+    <member-grid-wrapper
+        [members]="members"
+        (changeMember)="members = $event"
+    ></member-grid-wrapper>
     <div class="d-flex justify-content-center gap-10px">
         <button class="btn btn-success" (click)="submitFormCreateFc()">
             <i class="fas fa-plus me-2"></i>
