--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 /* Quartz Theme Specific CSS */
 @import 'ag-grid-community/styles/ag-theme-quartz.css';
 @import '~@ng-select/ng-select/themes/default.theme.css';
+@import 'ngx-toastr/toastr';
 @import './mixin';
 
 .form-control {
