handle upload media fc

--- a/src/app/module/member/components/member-grid-wrapper/member-grid-wrapper.component.html
+++ b/src/app/module/member/components/member-grid-wrapper/member-grid-wrapper.component.html
@@ -3,7 +3,7 @@
         <h4 class="text-capitalize">
             {{ 'MEMBER.LIST_OF_MEMBER' | translate }}
         </h4>
-        <button class="btn btn-success" (click)="openAddMemberModal()">
+        <button class="btn btn-sm btn-success" (click)="openAddMemberModal()">
             <i class="fas fa-plus me-2"></i>
             <span class="text-capitalize">
                 {{ 'MEMBER.CREATE_MEMBER' | translate }}
