--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,3 +52,23 @@ input {
         gap: #{$i}px;
     }
 }
+
+.image-preview {
+    .remove-image {
+        width: 20px;
+        height: 20px;
+        top: 5px;
+        right: 5px;
+    }
+
+    &:hover {
+        > .remove-image {
+            display: flex !important;
+        }
+    }
+}
+
+button:disabled {
+    cursor: not-allowed !important;
+    pointer-events: unset !important;
+}
