create update fc page

--- a/src/app/pages/football-club/create-football-club/create-football-club.page.html
+++ b/src/app/pages/football-club/create-football-club/create-football-club.page.html
@@ -13,7 +13,7 @@
         (changeMember)="members = $event"
     ></member-grid-wrapper>
     <div class="d-flex justify-content-center gap-10px">
-        <button class="btn btn-success" (click)="submitFormCreateFc()">
+        <button class="btn btn-success" (click)="onSubmitForm()">
             <i class="fas fa-plus me-2"></i>
             <span class="text-capitalize">
                 {{ 'FOOTBALL_CLUB.CREATE.BTN_CREATE' | translate }}
