integrate Search FC API

--- a/src/app/module/common/components/fms-select/fms-select.component.html
+++ b/src/app/module/common/components/fms-select/fms-select.component.html
@@ -12,7 +12,7 @@
         [bindValue]="bindValue"
         [placeholder]="placeholder"
         [multiple]="multiple"
-        [closeOnSelect]="false"
+        [closeOnSelect]="!multiple"
         [(ngModel)]="value"
         (blur)="markAsTouched()"
         (ngModelChange)="onChangeValue()"
