--- a/src/app/module/common/components/grid-core/grid-core.component.html
+++ b/src/app/module/common/components/grid-core/grid-core.component.html
@@ -8,7 +8,9 @@
     [noRowsOverlayComponent]="noRowComponent"
     [tooltipShowDelay]="0"
     [tooltipShowMode]="'whenTruncated'"
+    [enableCellTextSelection]="true"
     [copyHeadersToClipboard]="true"
+    [suppressMovableColumns]="true"
     [copyGroupHeadersToClipboard]="true"
     (gridSizeChanged)="onGridSizeChanged($event)"
 ></ag-grid-angular>
