--- a/src/app/pages/football-club/football-club.page.html
+++ b/src/app/pages/football-club/football-club.page.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column gap-4 h-100">
     <div class="p-3 bg-light rounded">
         <div class="p-3 bg-white rounded shadow">
-            <fc-form-search></fc-form-search>
+            <fc-form-search (search)="ngOnSearch($event)"></fc-form-search>
         </div>
     </div>
     <div class="p-3 bg-light rounded h-100">
@@ -10,8 +10,8 @@
         >
             <div class="d-flex justify-content-between align-items-center">
                 <span class="font-italic fw-semibold text-capitalize"
-                    >{{ 'COMMON.TOTAL_RECORD' | translate:{numberOfRecord: 1}
-                    }}</span
+                    >{{ 'COMMON.TOTAL_RECORD' | translate:{numberOfRecord:
+                    pagination.total} }}</span
                 >
                 <div class="d-flex gap-2">
                     <a
@@ -34,9 +34,16 @@
             </div>
 
             <div class="flex-grow-1">
-                <fc-grid></fc-grid>
+                <fc-grid
+                    [rowData]="footballClubs"
+                    [pagination]="pagination"
+                ></fc-grid>
             </div>
-            <pagination [pagination]="pagination"></pagination>
+            <pagination
+                [pagination]="pagination"
+                (pageSizeChange)="paginate($event)"
+                (paginate)="paginate($event)"
+            ></pagination>
         </div>
     </div>
 </div>
