--- a/src/app/module/common/components/action-column/action-column.component.html
+++ b/src/app/module/common/components/action-column/action-column.component.html
@@ -9,6 +9,6 @@
         class="bg-transparent border-0"
         [class]="action.classes"
     >
-        <i [class]="action.icon"></i>
+        <fa-icon [icon]="action.icon"></fa-icon>
     </button>
 </div>
