--- a/src/app/module/member/components/member-grid-wrapper/member-grid-wrapper.component.html
+++ b/src/app/module/member/components/member-grid-wrapper/member-grid-wrapper.component.html
@@ -4,7 +4,7 @@
             {{ 'MEMBER.LIST_OF_MEMBER' | translate }}
         </h4>
         <button class="btn btn-sm btn-success" (click)="openAddMemberModal()">
-            <i class="fas fa-plus me-2"></i>
+            <fa-icon [icon]="'plus'" class="me-2"></fa-icon>
             <span class="text-capitalize">
                 {{ 'MEMBER.CREATE_MEMBER' | translate }}
             </span>
