--- a/src/app/pages/football-club/create-football-club/create-football-club.page.html
+++ b/src/app/pages/football-club/create-football-club/create-football-club.page.html
@@ -14,7 +14,7 @@
     ></member-grid-wrapper>
     <div class="d-flex justify-content-center gap-10px">
         <button class="btn btn-success" (click)="onSubmitForm()">
-            <i class="fas fa-plus me-2"></i>
+            <fa-icon [icon]="['fas', 'plus']" class="me-2"></fa-icon>
             <span class="text-capitalize">
                 {{ 'FOOTBALL_CLUB.CREATE.BTN_CREATE' | translate }}
             </span>
