--- a/src/app/layout/main/components/header/header.component.html
+++ b/src/app/layout/main/components/header/header.component.html
@@ -5,7 +5,7 @@
         class="btn btn-link d-md-none rounded-circle mr-3"
         (click)="openSidebarMobile()"
     >
-        <i class="fa fa-bars"></i>
+        <fa-icon [icon]="'bars'"></fa-icon>
     </button>
 
     <span class="h4 ps-3 d-none d-md-block text-capitalize">{{
@@ -26,7 +26,8 @@
                 class="nav-link dropdown-toggle"
                 (click)="toggleDropdown(alertsDropdown)"
             >
-                <i class="fas fa-bell fa-fw"></i>
+                <fa-icon [icon]="'bell'"></fa-icon>
+
                 <!-- Counter - Alerts -->
                 <span class="badge badge-danger badge-counter">3+</span>
             </button>
@@ -42,7 +43,10 @@
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="mr-3">
                         <div class="icon-circle bg-primary">
-                            <i class="fas fa-file-alt text-white"></i>
+                            <fa-icon
+                                [icon]="'file-alt'"
+                                class="text-white"
+                            ></fa-icon>
                         </div>
                     </div>
                     <div>
@@ -55,7 +59,10 @@
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="mr-3">
                         <div class="icon-circle bg-success">
-                            <i class="fas fa-donate text-white"></i>
+                            <fa-icon
+                                [icon]="'donate'"
+                                class="text-white"
+                            ></fa-icon>
                         </div>
                     </div>
                     <div>
@@ -66,9 +73,10 @@
                 <a class="dropdown-item d-flex align-items-center" href="#">
                     <div class="mr-3">
                         <div class="icon-circle bg-warning">
-                            <i
-                                class="fas fa-exclamation-triangle text-white"
-                            ></i>
+                            <fa-icon
+                                [icon]="'exclamation-triangle'"
+                                class="text-white"
+                            ></fa-icon>
                         </div>
                     </div>
                     <div>
@@ -92,7 +100,7 @@
                 class="nav-link dropdown-toggle"
                 (click)="toggleDropdown(messagesDropdown)"
             >
-                <i class="fas fa-envelope fa-fw"></i>
+                <fa-icon [icon]="'envelope'"></fa-icon>
                 <!-- Counter - Messages -->
                 <span class="badge badge-danger badge-counter">7</span>
             </button>
@@ -214,15 +222,27 @@
                 aria-labelledby="userDropdown"
             >
                 <a class="dropdown-item" href="#">
-                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                    <fa-icon
+                        [icon]="['fas', 'user']"
+                        size="sm"
+                        class="mr-2 text-gray-400"
+                    ></fa-icon>
                     Profile
                 </a>
                 <a class="dropdown-item" href="#">
-                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                    <fa-icon
+                        [icon]="['fas', 'cogs']"
+                        size="sm"
+                        class="mr-2 text-gray-400"
+                    ></fa-icon>
                     Settings
                 </a>
                 <a class="dropdown-item" href="#">
-                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                    <fa-icon
+                        [icon]="'list'"
+                        size="sm"
+                        class="mr-2 text-gray-400"
+                    ></fa-icon>
                     Activity Log
                 </a>
                 <div class="dropdown-divider"></div>
@@ -232,9 +252,11 @@
                     data-toggle="modal"
                     data-target="#logoutModal"
                 >
-                    <i
-                        class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"
-                    ></i>
+                    <fa-icon
+                        [icon]="'sign-out-alt'"
+                        size="sm"
+                        class="mr-2 text-gray-400"
+                    ></fa-icon>
                     Logout
                 </a>
             </div>
