--- a/src/app/layout/main/components/sidebar/sidebar.component.html
+++ b/src/app/layout/main/components/sidebar/sidebar.component.html
@@ -9,9 +9,11 @@
         class="sidebar-brand d-flex align-items-center justify-content-center"
         [routerLink]="'/'"
     >
-        <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i>
-        </div>
+        <fa-icon
+            [icon]="'laugh-wink'"
+            [size]="'2xl'"
+            class="rotate-n-15"
+        ></fa-icon>
         <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
     </a>
 
@@ -44,16 +46,24 @@
         <li #li class="nav-item">
             <a
                 type="button"
-                class="nav-link collapsed"
+                class="d-flex justify-content-between nav-link collapsed"
                 [routerLink]="item.link"
                 [routerLinkActive]="'active'"
-                [attr.data-toggle]="item.children ? 'collapse' : ''"
                 (click)="routeLink(item.link, li)"
             >
-                <i [class]="item.icon"></i>
-                <span class="text-capitalize">{{
-                    item.label | translate
-                }}</span>
+                <div>
+                    <fa-icon
+                        [icon]="item.icon"
+                        class="mr-2"
+                        [styles]="{ color: '#ffffff4d' }"
+                    ></fa-icon>
+                    <span class="text-capitalize">{{
+                        item.label | translate
+                    }}</span>
+                </div>
+                <ng-container *ngIf="item.children">
+                    <fa-icon [icon]="['fas', 'angle-left']"></fa-icon>
+                </ng-container>
             </a>
             <ng-container *ngIf="item.children">
                 <div
