--- a/src/app/module/football-club/components/form-search/form-search.component.html
+++ b/src/app/module/football-club/components/form-search/form-search.component.html
@@ -52,7 +52,7 @@
 
     <div class="d-flex justify-content-start justify-content-md-center">
         <button class="btn btn-primary">
-            <i class="fas fa-search me-2"></i>
+            <fa-icon [icon]="['fas', 'search']" class="me-2"></fa-icon>
             <span class="text-capitalize">{{
                 'COMMON.SEARCH' | translate
             }}</span>
