--- a/src/app/pages/football-club/football-club.page.html
+++ b/src/app/pages/football-club/football-club.page.html
@@ -18,14 +18,20 @@
                         [routerLink]="'/football-club/create-football-club'"
                         class="btn btn-sm btn-success"
                     >
-                        <i class="fas fa-plus me-2"></i>
+                        <fa-icon
+                            [icon]="['fas', 'plus']"
+                            class="me-2"
+                        ></fa-icon>
                         <span class="text-capitalize"
                             >{{ 'COMMON.CREATE' | translate }}</span
                         >
                     </a>
 
                     <button class="btn btn-sm btn-secondary">
-                        <i class="fas fa-download me-2"></i>
+                        <fa-icon
+                            [icon]="['fas', 'download']"
+                            class="me-2"
+                        ></fa-icon>
                         <span class="text-capitalize"
                             >{{ 'COMMON.EXPORT_EXCEL' | translate }}</span
                         >
