--- a/src/app/pages/match-result/match-result.page.html
+++ b/src/app/pages/match-result/match-result.page.html
@@ -19,13 +19,19 @@
                         [routerLink]="'/match-result/create'"
                         class="btn btn-sm btn-success"
                     >
-                        <i class="fas fa-plus me-2"></i>
+                        <fa-icon
+                            [icon]="['fas', 'plus']"
+                            class="me-2"
+                        ></fa-icon>
                         <span class="text-capitalize"
                             >{{ 'COMMON.CREATE' | translate }}</span
                         >
                     </a>
                     <button class="btn btn-sm btn-secondary">
-                        <i class="fas fa-download me-2"></i>
+                        <fa-icon
+                            [icon]="['fas', 'download']"
+                            class="me-2"
+                        ></fa-icon>
                         <span class="text-capitalize"
                             >{{ 'COMMON.EXPORT_EXCEL' | translate }}</span
                         >
