--- a/src/app/pages/member/member.page.html
+++ b/src/app/pages/member/member.page.html
@@ -18,14 +18,20 @@
                         class="btn btn-sm btn-success"
                         (click)="openAddMemberModal()"
                     >
-                        <i class="fas fa-plus me-2"></i>
+                        <fa-icon
+                            [icon]="['fas', 'plus']"
+                            class="me-2"
+                        ></fa-icon>
                         <span class="text-capitalize"
                             >{{ 'COMMON.CREATE' | translate }}</span
                         >
                     </button>
 
                     <button class="btn btn-sm btn-secondary">
-                        <i class="fas fa-download me-2"></i>
+                        <fa-icon
+                            [icon]="['fas', 'download']"
+                            class="me-2"
+                        ></fa-icon>
                         <span class="text-capitalize"
                             >{{ 'COMMON.EXPORT_EXCEL' | translate }}</span
                         >
